tests/ui/rfcs/rfc-2497-if-let-chains/ast-validate-guards.stderr
error: `||` operators are not supported in let chain conditions
  --> $DIR/ast-validate-guards.rs:5:38
   |
LL |         Ok(opt) if let Some(4) = opt || false  => {}
   |                                      ^^

error: module cannot be declared unsafe
  --> $DIR/ast-validate-guards.rs:15:17
   |
LL |                 unsafe mod a {};
   |                 ^^^^^^

error: aborting due to 2 previous errors

